# zaida.ai

./: .env  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml  zaida.py
config/rasa/actions/: actions.py
config/rasa/data/: stories.yml
docker/actions/: Dockerfile  cpu.Dockerfile  endpoint.py  gpu.Dockerfile  requirements.txt
docker/actions/actions/: multimodal_pipeline.py  tell_time.py
docker/langchain/: Dockerfile  app.py  requirements.txt
docker/nlu/: Dockerfile  endpoints.yml  gpu.Dockerfile
docker/nlu-actions/: Dockerfile  endpoint.py  requirements.txt
docker/nlu-actions/actions/: __init__.py  multimodal_pipeline.py  search_wikipedia.py  tell_country_info.py  tell_time.py
docker/nlu/data/: nlu.yml
docker/proxy/: Dockerfile  nginx.conf.template
docker/stt/: Dockerfile  app.py  cpu.Dockerfile  gpu.Dockerfile  serve.py
docker/tts/: __main__.py  app.py  cpu.Dockerfile  gpu.Dockerfile  run.sh
docker/wshub/: Dockerfile  app.py
scripts/: get-kompose.sh
server/docker/nlu/: domain.yml  endpoints.yml
server/docker/stt/: requirements.txt
server/docker/tts/: Dockerfile  app.py
src/zaida/: __main__.py  main.py  nlu.py  stt.py  tts.py
src/zaida/nlu/: domain.yml
src/zaida/nlu/actions/: actions.py
src/zaida/nlu/data/: nlu.yml  rules.yml
