[tool.poetry]
name = "zaida"
version = "0.2.0"
authors = [
  "Mihail Costin Leonte <mail@mcleonte.com>"
]
readme = "README.md"
description = "Zaida AI assistant"
repository = "https://github.com/mcleonte/zaida.ai"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
sounddevice = "^0.4.5"
websockets = "^10.4"
requests = "^2.28.2"
pyperclip = "^1.8.2"
SpeechRecognition = "^3.9.0"
PyAudio = "^0.2.13"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
sqlfluff = "^1.4.5"
debugpy = "^1.6.4"
python-lsp-server = {extras = ["yapf", "pylint"], version = "^1.7.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry.scripts]
zaida = "zaida.main:main"
zaida-stt = "zaida.stt:main"
zaida-tts = "zaida.tts:main"
zaida-nlu = "zaida.nlu:main"
